@@ -40,6 +40,7 @@
   * Add support for ~source.removeUnusedImports~ for lsp-javascript
   * Add Python(ty) support
   * Add support for [[https://github.com/tombi-toml/tombi][Tombi language server]] (TOML language).
+  * Make lsp-headerline--check-breadcrumb public
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
